clusters/etl6/overlays/percona-instance/pet-clinic.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/redhat-developer-demos/quarkus-petclinic.git
    app.quarkus.io/build-timestamp: 2021-02-05 - 10:47:20 +0000
    app.quarkus.io/commit-id: 08ca17721180e3e754b1f79f25ccd3c2de46237a
  labels:
    app.kubernetes.io/name: quarkus-petclinic
    app.kubernetes.io/version: 1.0.0
  name: quarkus-petclinic
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-petclinic
    app.kubernetes.io/version: 1.0.0
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/redhat-developer-demos/quarkus-petclinic.git
    app.quarkus.io/build-timestamp: 2021-02-05 - 10:47:20 +0000
    app.quarkus.io/commit-id: 08ca17721180e3e754b1f79f25ccd3c2de46237a
  labels:
    app.kubernetes.io/name: quarkus-petclinic
    app.kubernetes.io/version: 1.0.0
  name: quarkus-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-petclinic
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/redhat-developer-demos/quarkus-petclinic.git
        app.quarkus.io/build-timestamp: 2021-02-05 - 10:47:20 +0000
        app.quarkus.io/commit-id: 08ca17721180e3e754b1f79f25ccd3c2de46237a
      labels:
        app.kubernetes.io/name: quarkus-petclinic
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      
      - env:
        - name: QUARKUS_LOG_LEVEL
          value: DEBUG
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: demo-pguser-demo
              key: user
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: demo-pguser-demo
              key: password
        - name: POSTGRES_URL
          valueFrom:
            secretKeyRef:
              name: demo-pguser-demo
              key: pgbouncer-jdbc-uri   
        - name:  QUARKUS_DATASOURCE_JDBC_URL
          valueFrom:
            secretKeyRef:
              name: demo-pguser-demo
              key: pgbouncer-jdbc-uri
        - name: QUARKUS_DATASOURCE_USERNAME
          valueFrom:
            secretKeyRef:
              name: demo-pguser-demo
              key: user
        - name: QUARKUS_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: demo-pguser-demo
              key: password                                                
        image: quay.io/rhdevelopers/quarkus-petclinic:1.0.0
        imagePullPolicy: Always
        name: quarkus-petclinic
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
